--- a/version2/public/css/style.css
+++ b/version2/public/css/style.css
@@ -266,7 +266,7 @@ form input {
     text-align: center;
     border: 1px solid #5b5b5b;
     border-radius: 70px;
-    color: #3dc961;
+    color: #555;
     font-size: 120%;
     letter-spacing: 1px;
 }
